# quantum_error_correction

./: README.md  pyproject.toml
notebooks/: bit_flip.ipynb  phase_flip.ipynb  shor.ipynb
